--- a/src/Wrapped Green/styles/styles.css
+++ b/src/Wrapped Green/styles/styles.css
@@ -71,6 +71,7 @@ span {
   justify-content: space-around;
   align-items: center;
   background-color: var(--clr-1);
+  z-index: 5;
 }
 
 .nav-menu-container__logo {
@@ -158,9 +159,6 @@ span {
   height: 100%;
 }
 
-.about-us__img-container img {
-}
-
 .about-us__text-container {
   place-self: center;
   width: 60%;
@@ -175,6 +173,7 @@ span {
   color: var(--clr-7);
   font-weight: 700;
   font-size: 2.5rem;
+  white-space: nowrap;
 }
 
 .about-us__text-container p {
@@ -229,6 +228,7 @@ span {
 
 .menu__items-text {
   display: flex;
+  height: 80px;
   justify-content: space-evenly;
   align-items: center;
   margin-top: 20px;
@@ -277,25 +277,19 @@ span {
 */
 
 #footer {
-  position: relative;
-  top: 120px;
-  width: 100%;
-  height: 455px;
-  padding: 40px;
   display: flex;
+  height: 400px;
+  margin-top: 130px;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   background-color: var(--clr-4);
-  background-image: url("/src/Wrapped Green/imgs/footer-figure.svg");
-  background-repeat: no-repeat;
-  background-position: 50px 50px;
   border-radius: 100% 100% 0% 0%;
 }
 
 .footer__logo-container {
   position: relative;
-  bottom: 120px;
+  bottom: 90px;
   border-radius: 50%;
   background-color: var(--clr-2);
   padding: 20px;
