--- a/src/Wrapped Green/styles/moblie.css
+++ b/src/Wrapped Green/styles/moblie.css
@@ -1,11 +1,34 @@
 @media only screen and (max-width: 950px) {
+  .nav-menu-container__logo img {
+    width: 120px !important;
+  }
   .nav-menu-container__menu-icon {
     display: block !important;
+    font-size: 2.5rem !important;
+    cursor: pointer;
+    position: relative;
+    right: -90px;
+    top: 50px;
   }
   .nav-menu-container__about,
   .nav-menu-container__menu-link,
   .nav-menu-container__contact {
     display: none;
+  }
+  div.nav-menu-container__menu-icon > div:nth-child(2) {
+    display: flex;
+    width: 200px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    height: 200px;
+    right: -180px;
+    top: 80px;
+    font-size: 1.5rem;
+    background-color: #fff;
+    padding: 15px;
+    transition: right 0.5s ease;
   }
 }
 
